--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+  outline: 0;
+}
+
 body {
   margin: 0;
   padding 0;
@@ -6,4 +10,29 @@ body {
 #canvas {
   display: block;
   margin: 10vh auto 0 auto;
+}
+
+#toolbar {
+  display: flex;
+  justify-content: center;
+  padding: 3rem 0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+#play-button {
+  border: none;
+  background-color: white;
+  color: black;
+  font-size: 7rem;
+  height: 5rem;
+  line-height: 50px;
+  overflow: hidden;
+  transition: transform .1s;
+}
+
+#play-button:hover {
+  cursor: pointer;
+  transform: scale(1.2);
 }
