--- a/style.css
+++ b/style.css
@@ -36,3 +36,18 @@ body {
   cursor: pointer;
   transform: scale(1.2);
 }
+
+#metronome {
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+  width: 4rem;
+  height: 4rem;
+  color: black;
+  border: 1rem solid black;
+  border-radius: 50%;
+  font-size: 3rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  text-align: center;
+}
