--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+  margin: none;
+}
+
 button::-moz-focus-inner {
   border: 0;
 }
@@ -14,59 +18,30 @@ body {
 
 #toolbar {
   display: flex;
+
   justify-content: center;
-  padding: 3rem 0;
+  align-items: center;
   position: absolute;
   bottom: 0;
+
+  height: 6rem;
   width: 100%;
+
+  background-color: black;
 }
 
-#play-button {
+.button {
   border: none;
-  background-color: white;
-  color: black;
-  font-size: 7rem;
+  background-color: transparent;
+  color: white;
+  font-size: 4rem;
   height: 5rem;
-  line-height: 50px;
-  overflow: hidden;
-  transition: transform .1s;
 }
 
-#play-button:hover {
+.button:hover {
   cursor: pointer;
-  transform: scale(1.2);
 }
 
-#metronome {
-  position: absolute;
-  top: 2rem;
-  right: 2rem;
-  width: 4rem;
-  height: 4rem;
-  color: black;
-  border: 1rem solid #ececec;
-  border-radius: 50%;
-  font-size: 3rem;
-  font-family: "Roboto", sans-serif;
-  font-weight: bold;
-  text-align: center;
-}
-
-.metronome-1 {
-  border-top: 1rem solid black !important;
-}
-
-.metronome-2 {
-  border-top: 1rem solid black !important;
-  border-right: 1rem solid black !important;
-}
-
-.metronome-3 {
-  border-top: 1rem solid black !important;
-  border-right: 1rem solid black !important;
-  border-bottom: 1rem solid black !important;
-}
-
-.metronome-4 {
-  border: 1rem solid black !important;
+.button i {
+  font-size: 4rem;
 }
