--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ button::-moz-focus-inner {
 body {
   margin: 0;
   padding 0;
+
+  font-family: "Roboto", sans-serif;
 }
 
 #canvas {
@@ -17,17 +19,46 @@ body {
 }
 
 #toolbar {
+  box-sizing: border-box;
   display: flex;
 
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
   position: absolute;
   bottom: 0;
 
+  padding: 0 1rem;
   height: 6rem;
   width: 100%;
 
   background-color: black;
+}
+
+#toolbar div {
+  display: flex;
+
+  align-items: center;
+}
+
+#toolbar label {
+  padding: 1rem;
+
+  background-color: white;
+
+  font-weight: bold;
+}
+
+#bpm-input {
+  border: none;
+
+  width: 4rem;
+  height: 54px;
+
+  background-color: #262626;
+  color: white;
+
+  font-weight: bold;
+  font-size: 1.5rem;
+  text-align: center;
 }
 
 .button {
