--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-  margin: none;
+  margin: 0;
 }
 
 button::-moz-focus-inner {
@@ -20,7 +20,7 @@ body {
 
   margin: 0;
 
-  color: #F2F2F2;
+  color: #DBDBDB;
 
   user-select: none;
   -moz-user-select: none;
@@ -28,7 +28,10 @@ body {
 
 #canvas {
   display: block;
+
   margin: 10vh auto 0 auto;
+
+  background-color: black;
 }
 
 #toolbar {
@@ -50,7 +53,13 @@ body {
   display: flex;
 
   align-items: center;
+
+  width: calc(100vw / 3);
 }
+
+#toolbar div:nth-of-type(1) { justify-content: start; }
+#toolbar div:nth-of-type(2) { justify-content: center; }
+#toolbar div:nth-of-type(3) { justify-content: end; }
 
 #bpm-label {
   padding: 1rem;
@@ -62,12 +71,13 @@ body {
 }
 
 #bpm-input {
-  border: none;
+  box-sizing: border-box;
+  border: 3px solid white;
 
-  width: 4rem;
+  width: 5rem;
   height: 54px;
 
-  background-color: #262626;
+  background-color: black;
   color: white;
 
   font-weight: bold;
