--- a/style.css
+++ b/style.css
@@ -28,10 +28,11 @@ body {
 
 #canvas {
   display: block;
+  border-radius: 20px;
 
   margin: 10vh auto 0 auto;
 
-  background-color: black;
+  background-color: #EDEDED;
 }
 
 #toolbar {
