--- a/style.css
+++ b/style.css
@@ -26,6 +26,36 @@ body {
   -moz-user-select: none;
 }
 
+#source-code-link {
+  position: absolute;
+  right: 3.5rem;
+  top: 0;
+  width: 0;
+  height: 5rem;
+  padding: 0;
+  color: white;
+  border-left: 2rem solid black;
+  border-right: 2rem solid black;
+  border-bottom: 2rem solid transparent;
+  transition: height .2s;
+}
+
+#source-code-link i {
+  margin-left: -1.5rem;
+  margin-top: 1.3rem;
+  transition: margin-top .2s;
+  font-size: 3rem;
+  font-weight: bold;
+}
+
+#source-code-link:hover {
+  height: 5.5rem;
+}
+
+#source-code-link:hover i {
+  margin-top: 1.8rem;
+}
+
 #canvas {
   display: block;
   border-radius: 20px;
