--- a/src/style.scss
+++ b/src/style.scss
@@ -37,7 +37,7 @@ body {
   border: .3rem dashed #ddd;
   border-radius: 50%;
   margin: 1rem;
-  ion-icon {
+  i {
     font-size: 3rem;
     color: #ddd;
     margin-top: .3rem;
@@ -100,7 +100,7 @@ body {
   border-right: 2rem solid $smoky-black;
   border-bottom: 2rem solid transparent;
   transition: height .2s;
-  & ion-icon {
+  & i {
   margin-left: -1.5rem;
   margin-top: 1rem;
   transition: margin-top .2s;
@@ -109,7 +109,7 @@ body {
   }
   &:hover {
     height: 5.5rem;
-    & ion-icon {
+    & i {
       margin-top: 1.5rem;
     }
   }
