--- a/src/style.scss
+++ b/src/style.scss
@@ -1,217 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Knewave&display=swap');
+@import url('https://unpkg.com/normalize.css@8.0.1/normalize.css');
 @import 'styles/colors.scss';
-
-* {
-  margin: 0;
-}
-
-button::-moz-focus-inner {
-  border: 0;
-}
+@import 'styles/toolbar.scss';
+@import 'styles/musicians.scss';
+@import 'styles/tippy.scss';
+@import 'styles/misc.scss';
 
 body {
-  margin: 0;
-  padding: 0;
-
   font-family: "Roboto", sans-serif;
   background-color: $background;
-}
-
-.musician {
-  width: 6rem;
-  height: 6rem;
-  border-radius: 50%;
-  margin: 1rem;
-  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
-  background-size: contain;
-}
-
-.muted {
-  opacity: 0.3;
-}
-
-.musician-button {
-  width: 6rem;
-  height: 6rem;
-  border: .5rem dashed #fff;
-  border-radius: 50%;
-  margin: 1rem;
-  background-color: transparent;
-  img {
-    padding: 1rem 0;
-    width: 75%;
-  }
-  &:hover {
-    cursor: pointer;
-  }
-}
-
-.instrument-button {
-  box-sizing: border-box;
-  margin: 0.5rem;
-  padding: 0.5rem;
-  cursor: pointer;
-  background-color: transparent;
-  border: none;
-  border-radius: 10%;
-  transition: .3s;
-  & img {
-    filter: invert(1);
-    width: 3rem;
-    height: 3rem;
-  }
-  &:hover img {
-    transform: scale(1.05);
-  }
-}
-
-#musicians {
-  display: flex;
-  justify-content: center;
-  width: 500px;
-  margin: 0 auto;
-  margin-top: 30vh;
-}
-
-#version {
-  font-family: 'Knewave', cursive;
-  font-size: 2rem;
-  position: absolute;
-  top: 0.5rem;
-  left: -4rem;
-  margin: 0;
-  color: $white;
-  user-select: none;
-  -moz-user-select: none;
-  background-color: $black;
-  padding: .3rem 4rem;
-  transform: rotate(-45deg);
-}
-
-#source-code-link {
-  position: absolute;
-  right: 3.5rem;
-  top: 0;
-  width: 0;
-  height: 5rem;
-  padding: 0;
-  color: $white;
-  border-left: 2rem solid $black;
-  border-right: 2rem solid $black;
-  border-bottom: 2rem solid transparent;
-  transition: height .2s;
-  & i {
-  margin-left: -1.5rem;
-  margin-top: 1rem;
-  transition: margin-top .2s;
-  font-size: 3rem;
-  font-weight: bold;
-  }
-  &:hover {
-    height: 5.5rem;
-    & i {
-      margin-top: 1.5rem;
-    }
-  }
-}
-
-#canvas {
-  display: block;
-  margin: 10vh auto 0 auto;
-}
-
-#toolbar {
-  box-sizing: border-box;
-  display: flex;
-
-  justify-content: space-between;
-  position: absolute;
-  bottom: 0;
-
-  padding: 0 1rem;
-  height: 5.2rem;
-  width: 100%;
-
-  background-color: $black;
-}
-
-#toolbar div {
-  display: flex;
-
-  align-items: center;
-
-  width: calc(100vw / 3);
-}
-
-#toolbar div:nth-of-type(1) { justify-content: start; }
-#toolbar div:nth-of-type(2) { justify-content: center; }
-#toolbar div:nth-of-type(3) { flex-direction: row-reverse; }
-
-#bpm-label {
-  font-family: 'Knewave', cursive;
-  background-color: #fff;
-  font-weight: bold;
-  animation: pulse infinite;
-  font-size: 1.55rem;
-  padding: 0.4rem 0.4rem 0.4rem 1rem;
-  border-radius: 10px 0 0 10px;
-}
-
-#bpm-input {
-  box-sizing: border-box;
-  border: 0.4rem solid #fff;
-  width: 5rem;
-  background-color: #000;
-  color: #fff;
-  font-weight: bold;
-  font-size: 1.5rem;
-  text-align: center;
-  border-radius: 0 10px 10px 0;
-  font-family: knewave;
-}
-
-.button {
-  border: none;
-  background-color: transparent;
-  color: $white;
-  font-size: 4rem;
-  height: 5rem;
-  &:hover {
-    cursor: pointer;
-  }
-  &:disabled {
-    opacity: 0.2;
-  }
-  & img {
-    width: 80%;
-  }
-}
-
-.tippy-tooltip.black-theme {
-  border-radius: 0;
-  color: white;
-  top: 0.5rem;
-  background: url('/images/dropdown.svg');
-  background-size: contain;
-  background-position: top;
-  background-repeat: no-repeat;
-  padding-top: 1.2rem;
-  height: 6rem;
-}
-
-.tippy-tooltip.black-theme[data-animatefill] {
-  background-color: transparent;
-}
-
-.tippy-tooltip.black-theme .tippy-backdrop {
-  background-color: black;
-}
-
-.tippy-tooltip.black-theme .tippy-arrow {
-  border: none;
-}
-
-@keyframes pulse {
-  from { outline: 0 solid $white; }
-  to { outline: 10px solid; }
 }
