--- a/src/styles/misc.scss
+++ b/src/styles/misc.scss
@@ -18,27 +18,11 @@
 
 #source-code-link {
   position: absolute;
-  right: 3.5rem;
+  right: 0;
   top: 0;
 
-  border-left: 2rem solid #000;
-  border-right: 2rem solid #000;
-  border-bottom: 2rem solid transparent;
-  width: 0;
-  height: 5rem;
-  padding: 0;
-
-  color: #fff;
-
-  transition: height .2s;
-
-  & i {
-    margin-left: -1.5rem;
-    margin-top: 1rem;
-
-    font-size: 3rem;
-    font-weight: bold;
-
-    transition: margin-top .2s;
+  & img {
+    width: 100px;
+    height: 100px;
   }
 }
