--- a/src/styles/musicians.scss
+++ b/src/styles/musicians.scss
@@ -12,16 +12,20 @@
 .muted { opacity: 0.3; }
 
 .musician-button {
-  border: .5rem dashed #fff;
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  border: none;
   border-radius: 50%;
-  width: 6rem;
-  height: 6rem;
+  width: 5rem;
+  height: 5rem;
   margin: 1rem;
 
-  background-color: transparent;
+  background-image: url('/images/add-button.svg');
+  background-size: contain;
 
   &:hover { cursor: pointer; }
-  img { padding: 1rem 0; width: 75%; }
+  img { padding: 1rem 0; width: 60%; }
 }
 
 .instrument-button {
