Minor change to musician dropdown

--- a/src/styles/tippy.scss
+++ b/src/styles/tippy.scss
@@ -1,12 +1,12 @@
 .tippy-tooltip.black-theme {
-  top: .4rem;
+  width: 17rem;
 
   border-radius: 0;
 
   color: white;
   background-image: url('/images/dropdown.svg');
   background-color: transparent;
-  background-size: contain;
+  background-size: 18rem 5rem;
   background-position: top;
   background-repeat: no-repeat;
 }
@@ -17,4 +17,4 @@
 
 .tippy-tooltip.black-theme .tippy-arrow { border: none; }
 
-.tippy-tooltip.black-theme .tippy-content { margin-top: -1rem; }
+.tippy-tooltip.black-theme .tippy-content { margin-top: -0.4rem; }
