Add single note sequencer to musicians

--- a/src/style.scss
+++ b/src/style.scss
@@ -4,6 +4,7 @@
 @import 'styles/toolbar.scss';
 @import 'styles/musicians.scss';
 @import 'styles/tippy.scss';
+@import 'styles/sequencer.scss';
 @import 'styles/misc.scss';
 
 body {
