--- a/src/assets/sass/colors.scss
+++ b/src/assets/sass/colors.scss
@@ -1,5 +1,4 @@
-$background: #ECECEC;
-$toolbar: #000;
-
-$black: #000;
-$white: #fff;
+$primary: #F9C80E;
+$accent: #1966DA;
+$black: #000000;
+$white: #ffffff;
