--- a/src/style.scss
+++ b/src/style.scss
@@ -1,17 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Knewave&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Rubik:400,700');
 @import url('https://unpkg.com/normalize.css@8.0.1/normalize.css');
-@import 'styles/colors.scss';
-@import 'styles/toolbar.scss';
-@import 'styles/musicians.scss';
-@import 'styles/tippy.scss';
-@import 'styles/sequencer.scss';
-@import 'styles/misc.scss';
+@import './assets/sass/colors.scss';
+@import './assets/sass/toolbar.scss';
+@import './assets/sass/musicians.scss';
+@import './assets/sass/tippy.scss';
+@import './assets/sass/sequencer.scss';
+@import './assets/sass/misc.scss';
 
 body {
   font-family: "Roboto", sans-serif;
-  background-color: $background;
-  background-image: url('/images/logo.svg');
-  background-position: 50% 8rem;
-  background-repeat: no-repeat;
-  background-size: 30rem;
+  background-color: $white;
 }
