--- a/src/assets/sass/toolbar.scss
+++ b/src/assets/sass/toolbar.scss
@@ -23,9 +23,10 @@
   & div:nth-of-type(2) { justify-content: center; }
   & div:nth-of-type(3) { flex-direction: row-reverse; }
 
-  &.edit-mode {
-    top: 6rem;
-  }
+}
+
+body.edit-mode #toolbar {
+  top: 6rem;
 }
 
 #toolbar #bpm-icon {
