Change sequencer css and html

--- a/src/assets/sass/colors.scss
+++ b/src/assets/sass/colors.scss
@@ -2,3 +2,8 @@ $primary: #1966DA;
 $accent: #F9C80E;
 $black: #000000;
 $white: #ffffff;
+
+$blue: blue;
+$green: green;
+$red: red;
+$orange: orange;
