Change colors in colors.scss

--- a/src/assets/sass/colors.scss
+++ b/src/assets/sass/colors.scss
@@ -3,7 +3,7 @@ $accent: #F9C80E;
 $black: #000000;
 $white: #ffffff;
 
-$blue: blue;
-$green: green;
-$red: red;
-$orange: orange;
+$blue: #246eb9;
+$green: #4cb944;
+$red: #e03616;
+$orange: #f77f00;
