--- a/src/assets/style/colors.scss
+++ b/src/assets/style/colors.scss
@@ -1,9 +1,9 @@
-$primary: #1966DA;
+$primary: #000000;
 $accent: #F9C80E;
 $black: #000000;
 $white: #ffffff;
 
-$blue: #246eb9;
+$blue: #1966DA;
 $green: #4cb944;
 $red: #e03616;
 $orange: #f77f00;
