--- a/src/assets/style/misc.scss
+++ b/src/assets/style/misc.scss
@@ -2,9 +2,12 @@
   position: absolute;
   right: 0;
   top: 0;
+  width: 6rem;
+  height: 6rem;
 
-  & img {
-    width: 5rem;
+  & svg {
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -47,10 +50,12 @@ body.edit-mode .transport {
     width: 4rem;
     height: 4rem;
     padding: 0;
-    background-image: url(/images/add.svg);
-    background-size: contain;
     background-color: transparent;
     &:hover { cursor: pointer; }
+    & svg {
+      width: 100%;
+      height: 100%;
+    }
   }
   & .content {
     display: none;
